[package]
name = "rfs_br"
version = "1.0.1"
edition = "2021"
description = "Rust File System"
authors = ["gabrieluizsf"]
license = "MIT"
repository = "https://github.com/gabrielluizsf/rfs"
homepage = "https://github.com/gabrielluizsf/rfs"
documentation = "https://github.com/gabrielluizsf/rfs/blob/main/README.md"

[dependencies]
